[impl] basic foreground service as basis for the sensor data sender

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".SensorDetailsActivity"></activity>
+        <service
+            android:name="com.woodvillage.sensortest.services.SensorService"
+            android:enabled="true" >
+        </service>
+
     </application>
 
 </manifest>
